--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "coffee-script": "1.3.3",
 	  "ar-drone": "*",
-    "opencv": "*"
+    "opencv": "*",
+    "ffmpeg", "*"
   }
 }
