--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "coffee-script": "1.3.3",
 	  "ar-drone": "*",
     "opencv": "*",
-    "ffmpeg": "*"
+    "ffmpeg": "*",
+    "easyimage": "*"
   }
 }
